Adjust switch cases Remove usage of instance of variables